--- a/packages/twenty-docker/.env.example
+++ b/packages/twenty-docker/.env.example
@@ -5,6 +5,8 @@ TAG=latest
 PG_DATABASE_HOST=db:5432
 
 SERVER_URL=http://localhost:3000
+# REDIS_HOST=redis
+# REDIS_PORT=6379
 
 # Use openssl rand -base64 32 for each secret
 # ACCESS_TOKEN_SECRET=replace_me_with_a_random_string_access
@@ -19,5 +21,3 @@ STORAGE_TYPE=local
 # STORAGE_S3_REGION=eu-west3
 # STORAGE_S3_NAME=my-bucket
 # STORAGE_S3_ENDPOINT=
-
-MESSAGE_QUEUE_TYPE=pg-boss
