--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twenty-server",
-  "version": "0.30.0",
+  "version": "0.31.canary",
   "description": "",
   "author": "",
   "private": true,
