--- a/packages/twenty-emails/package.json
+++ b/packages/twenty-emails/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twenty-emails",
-  "version": "0.31.0-canary",
+  "version": "0.31.0",
   "description": "",
   "author": "",
   "private": true,
