--- a/packages/twenty-zapier/tsconfig.json
+++ b/packages/twenty-zapier/tsconfig.json
@@ -9,5 +9,12 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true
-  }
+  },
+  "exclude": [
+    "**/*.spec.ts",
+    "**/*.test.ts",
+    "**/*.spec.tsx",
+    "**/*.test.tsx",
+    "jest.config.ts"
+  ]
 }
